Fixing issue with long table and field names overflowing in tooltip

--- a/src/components/tooltip.pcss
+++ b/src/components/tooltip.pcss
@@ -1,6 +1,7 @@
 .tooltip {
   font-size: 1.5rem;
   max-width: 30rem;
+  overflow-wrap: break-word;
 
   .headerContainer {
     margin-bottom: 1em;
